...
  LaunchedEffect(isLoadingUser, isLoadingTrip) { isLoading = isLoadingUser || isLoadingTrip }

  LoadParticipantsEffect(trips, userViewModel)

  Scaffold(
      floatingActionButton = { AddTripFAB(isConnected, navigationActions) },
      modifier = Modifier.testTag("overviewScreen"),
      topBar = {
        Row(
            modifier = Modifier.fillMaxWidth().padding(horizontal = 16.dp, vertical = 24.dp),
            verticalAlignment = Alignment.CenterVertically,
            horizontalArrangement = Arrangement.SpaceBetween) {
              SearchBar(
...
        if (isConnected) {
          navigationActions.navigateTo(Screen.ADD_TRIP)
        } else {
          Toast.makeText(context, R.string.notification_no_internet_text, Toast.LENGTH_SHORT).show()
        }
      },
      modifier = Modifier.testTag("createTripButton")) {
        Icon(
            Icons.Outlined.Add,
            stringResource(R.string.floating_button),
            modifier = Modifier.testTag("addIcon"))
      }
}
...
        tripsViewModel.selectTrip(trip)
      },
      modifier =
          Modifier.width(353.dp)
              .height(228.dp)
              .padding(start = 10.dp, top = 10.dp, end = 10.dp, bottom = 10.dp)
              .testTag("cardItem"),
      shape = RoundedCornerShape(16.dp),
      content = {
        Row(
            modifier = Modifier.fillMaxSize().testTag("cardRow"),
            verticalAlignment = Alignment.Top,
            horizontalArrangement = Arrangement.spacedBy(3.dp)) {
...
