...
      singleLine = true,
      textStyle = textStyle,
      shape = RoundedCornerShape(30.dp),
      leadingIcon = {
        Icon(
            imageVector = Icons.Default.Search,
            contentDescription = "Search",
            tint = MaterialTheme.colorScheme.onSurfaceVariant)
      },
      trailingIcon = {
        if (query.isNotEmpty()) {
          IconButton(
              onClick = {
...
