...
      userViewModel.getNotificationsCount {}
      tripsViewModel.getNotificationsCount {}
    }
  }

  NavigationBar(
      modifier = Modifier.fillMaxWidth().height(60.dp).testTag("bottomNavigationMenu"),
      containerColor = MaterialTheme.colorScheme.surface,
      content = {
        tabList.forEach { tab ->
          NavigationBarItem(
              icon = {
                if (tab.route == Route.PROFILE && totalNotifications > 0) {
...
